oudfrontend/src/components/WebPlayer/Player/Player.css
.img-thumbnail {
  /* max-width: 20%; */
  height: auto;
  /* /* z-index: 4; */
  /* width: 20%; */
  height: 50%;
  bottom: 100px;
  position: fixed;
  padding: 0;
  border: 0;
}
.now-playing-bar-container {
  width: 100%;
  background-color: black;
  bottom: 0;
  position: fixed;
  min-width: 620px;
  height: 100px;
  z-index: 4;
}
.now-playing-bar {
  display: flex;
  height: 90px;
  padding: 16px;
  box-sizing: border-box;
}
.now-playing-bar-left,
.now-playing-bar-right {
  width: 30%;
  min-width: 180px;
}
.now-playing-bar-right {
  position: relative;
  margin-top: 16px;
  float: right;
  right: 0;
}
.now-playing-bar-left {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.now-playing-bar-left .content .player-controls {
  margin-top: 6px;
}
.now-playing-bar-center {
  width: 40%;
  max-width: 700px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.now-playing-bar .content {
  width: 100%;
  height: 57px;
}
.now-playing-bar-center .player-controls .control-buttons {
  margin: 0 auto;
  /* display: table; */
  align-self: flex-end;
}
.control-button {
  background-color: transparent;
  border: none;
  vertical-align: middle;
}
.control-button img {
  width: 20px;
  height: 20px;
}
.control-button.play img,
.control-button.pause img {
  width: 32px;
  height: 32px;
  cursor: pointer;
}
.now-playing-bar-left .album-art-work {
  max-width: 66px;
  margin-right: 15px;
  float: left;
  background-size: cover;
  height: 57px;
  width: 66px;
}
.track-controls {
  display: flex;
}
.now-playing-bar-center .content .track-controls {
  width: 100%;
  position: relative;
  left: 6%;
}
.now-playing-bar-center .track-info {
  margin: auto;
}
.now-playing-bar-center .track-info .track-name {
  color: #ffce00;
  text-decoration: none;
  position: relative;
  float: left;
}
.now-playing-bar-center .track-info .track-name::after {
  content: "  .  ";
}
.now-playing-bar-center .track-info .artist-name {
  position: relative;
  font-size: 12px;
  color: #a0a0a0;
  text-decoration: none;
}
a:hover {
  text-decoration: none;
}
button:focus {
  outline: none;
}
.volume-bar {
  /* width: 180px; */
  position: relative;
  /* transform-style: flat; */
  float: right;
  right: 0;
  display: flex;
  align-items: center;
  vertical-align: middle;
}

.ablum-link {
  width: 40%;
  display: block;
}
/* .left-control {
  width: 60%;
  display: flex;
} */
.extended-card-button {
  position: absolute;
  left: 54px;
  top: 18px;
  background: transparent;
  z-index: 1;
  padding: 0;
  display: inline;
  justify-content: center;
  border: 0;
  /* opacity: 0; */
}
.extend-img {
  opacity: 1;
}
.extend-img:hover {
  opacity: 1;
}
.expanded-img {
  width: 20%;
  display: none;
}
.expanded-img-btn {
  position: absolute;
  left: 54px;
  top: 18px;
  background: transparent;
  z-index: 4;
  padding: 0;
  display: inline;
  justify-content: center;
  border: 0;
}
.playback-bar {
  display: flex;
}
.progress-time {
  color: #a0a0a0;
  font-size: 11px;
  min-width: 40px;
  text-align: center;
}
.progress-bar {
  min-width: 125px;
  width: 100%;
  height: 12px;

  display: inline-flex;
  cursor: pointer;
  background-color: transparent;
}
.playback-bar .progress-bar {
  margin-top: 3px;
}
.progress-bar-bg {
  background-color: #404040;
  height: 4px;
  width: 100%;
  border-radius: 2px;
}
.progress {
  background-color: #ffce00;
  height: 4px;
  width: 0;
  border-radius: 2px;
  transition: 0.1s linear;
  transition-property: width, background-color;
}
.extedned-thumb {
  position: fixed;
  bottom: 99px;
  transition: 0.5s ease;
  height: 35%;
  width: 35%;
  background-size: cover;
}
.thumb-img {
  position: relative;
  /* bottom: 99px; */
  max-width: 35%;
  background-size: cover;
  width: 100%;
  height: 100%;
}
.close-thumb {
  position: absolute;
  left: 29%;
  top: 3%;
  background: transparent;
  border: none;
  transform: rotateZ(180deg);
}
@media screen and (max-height: 450px) {
  .extedned-thumb .overlay {
    overflow-y: auto;
  }
  .extedned-thumb .overlay a {
    font-size: 20px;
  }
  .extedned-thumb .overlay .close-btn {
    font-size: 40px;
    top: 15px;
    right: 35px;
  }
}
@media only screen and (max-width: 665px) {
  .now-playing-bar-container {
    min-width: 320px;
  }
  .ablum-link,
  .previous,
  .next,
  .now-playing-bar-right,
  .queue-container {
    display: none !important;
  }
  .play,
  .pause {
    float: left;
    position: absolute;
    left: 80%;
    bottom: 52%;
    width: 3em;
    height: 3em;
    z-index: 6;
  }
  .now-playing-bar-center {
    width: 100%;
  }
  .now-playing-bar-left {
    min-width: 0;
    width: 24px;
    height: 24px;
    float: right;
  }
  .now-playing-bar-left .content .player-controls {
    margin: 0;
  }
}

